fixed blurry images

--- a/css/sander.css
+++ b/css/sander.css
@@ -32,6 +32,8 @@
   background-color: white;
   padding: 10px;
   border-radius: 20px;
+  width: 50%;
+  margin: 0 auto;
 }
 
 .grid-container article {
@@ -44,7 +46,7 @@
   /* border: solid 2px white; */
   border-radius: 15px;
   box-shadow: 3px 4px 12px rgba(0, 0, 0, 0.2);
-  height: 120px;
+  height: 500px;
   /* line-height: 160px; */
   padding: 3px;
 }
@@ -52,10 +54,8 @@
 .grid-container article img {
   margin: 0;
   text-align: center;
-  vertical-align: middle;
   width: 100%;
   height: 100%;
-  object-fit: cover;
   border-radius: 15px;
 }
 
